--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <main>
+        <div class="tile" data-index="0"></div>
+        <div class="tile" data-index="1"></div>
+        <div class="tile" data-index="2"></div>
+        <div class="tile" data-index="3"></div>
+        <div class="tile" data-index="4"></div>
+        <div class="tile" data-index="5"></div>
+        <div class="tile" data-index="6"></div>
+        <div class="tile" data-index="7"></div>
+        <div class="tile" data-index="8"></div>
+    </main>
 </body>
 </html>
