style: Improve design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1 class="title">Tic-Tac-Toes 🦶 🤤</h1>
+    <h2 class="gameStateText">GAME STATUS</h2>
     <main>
         <div class="tile" data-index="0"></div>
         <div class="tile" data-index="1"></div>
@@ -19,5 +21,6 @@
         <div class="tile" data-index="7"></div>
         <div class="tile" data-index="8"></div>
     </main>
+    <button id="restartButton">Restart</button>
 </body>
 </html>
